--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -17,7 +17,8 @@
   
   .banner {
     position: fixed;
-   bottom: 0;
+    top: 0;
+    bottom: 0;
     left: 0;
     width: 100%;
     height: calc(100vh);
